# io-game

./: .eslintrc  .gitattributes  Cargo.toml  README.md  index.ts  package.json  tsconfig.json
@types/: server.d.ts
client/: game.js  index.js  types.ts
server/: http.js  index.js  log.js  websocket.js
src/: index.ts
src/@types/: client.d.ts  server.d.ts
src/client/: game.js  index.html  index.js  selectors.js  style.css
src/client/assets/tilemaps/: Interiors_16x16.tsx  Tileset_16x16_8.tsx  interior.json  interior.tmx
src/client/shared/: utils.js
src/server/: http.js  index.js  utils.js  websocket.js
src/test/: binary-messages.test.js
src/types/: globals.d.ts  index.ts
