[package]
name = "io-game"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "server/main.rs"

[dependencies]
tokio = { version = "0.3.4", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.12.0"
tungstenite = "0.11.1"
log = "0.4.11"
futures-util = "0.3.8"
futures-channel = "0.3.8"
